--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typecheck": "npm run hcm && tsc --noEmit"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "next": "^13.4.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
